# password_manager

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  STATUS.md  USER_GUIDE.md  go.mod  go.sum  index.html  note.md  package-lock.json  package.json  tailwind.config.js
agents/: README.md  builder.md  builder_prompt.md  testing_prompt.md
cmd/pwman/: main.go
cmd/server/: device_test.go  integration_test.go  main.go  pairing_test.go
docs/: AGENTS.md  ARCHITECTURE.md  AUTH_FLOW_FIX.md  BUILD.md  CLAUDE_ANALYSIS_PROMPT.md  CODER_AGENT.md  CODE_REVIEW.md  COMPLETE_SUMMARY.md  CONTEXT.md  CRITICAL_BUG_FIXES.md  DEVICE_PAIRING_PLAN.md  FINAL_SUMMARY.md  HANDLER_EXTRACTION_STATUS.md  IMPLEMENTATION_BRIEF_PHASE1.md  IMPLEMENTATION_BRIEF_PHASE2.md  IMPLEMENTATION_BRIEF_PHASE3.md  IMPLEMENTATION_BRIEF_PHASE4.md  IMPLEMENTATION_CHEATSHEET.md  IMPLEMENTATION_DECISION_MATRIX.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP_PRODUCTION_READY.md  IMPLEMENTATION_STATUS.md  P2P_IMPLEMENTATION_PLAN.md  P2P_SYNC_PLAN.md  PHASE3_FINAL_REPORT.md  PHASE3_PLAN.md  PHASE3_PROGRESS.md  PHASE4_PLAN.md  PLAN.md  POST_PAIRING_SYNC_PLAN.md  PRODUCTION_READINESS_REVIEW.md  PRODUCTION_READINESS_REVIEW_PROMPT.md  PRODUCTION_REMEDIATION_PLAN.md  README.md  README_DOCUMENTATION.md  REFACTORING_BUILD_PLAN.md  REFACTORING_PLAN.md  REFACTORING_PLAN_V2.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  (+11 more)
scripts/: start.bat  start.sh  test_pairing.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  main.rs
(+75 files in other folders)
